tests/NormalTests/paczka1/small_fuzzy/27803850.err
Error in line 1: 1Zn A448 74,2
Error in line 9: 6HRTUVRjc A700 57,7
Error in line 11: 6HRTUVRjc A44< 133,3
